# angelovich.core

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish-test.yml
angelovich/core/: DataStorage.py
src/angelovich/http/: __init__.py  request.py  response.py  server.py
src/angelovichcore/: DataStorage.py  Dispatcher.py
tests/: DataStorageTest.py
