[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/*", ]

[tool.hatch.build.targets.wheel]
packages = ["src/angelovich.core"]


[project]
name = "angelovich.core"
version = "0.0.1"
description = "Reusable python code by Angelovich"
readme = { file = "README.md", content-type = "text/markdown" }

authors = [
    { name = "Angelovich", email = "angel777da@gmail.com" },
]
maintainers = []

requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

license = "MIT"
license-files = ["LICEN[CS]E*"]

keywords = ["Data Storage", "ECS-like", "event bus", "decouple", ""]

[project.urls]
Homepage = "https://github.com/Angel777d/angelovich.core"
Changelog = "https://github.com/Angel777d/angelovich.core/blob/main/CHANGELOG.md"

